updated two pages

--- a/lawn-basics/warm-season-vs-cool-season-grasses-explained.html
+++ b/lawn-basics/warm-season-vs-cool-season-grasses-explained.html
@@ -5,27 +5,32 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>Warm Season vs Cool Season Grasses Explained</title>
-  <meta name="description" content="Clear differences between warm-season and cool-season grasses, when each thrives, and how growth patterns affect mowing, watering, and color.">
+  <meta name="description" content="Some lawns thrive in summer heat while others peak in cooler months. Knowing which type you have explains growth, color, and timing.">
   <link rel="canonical" href="https://grizzlygreens.net/lawn-basics/warm-season-vs-cool-season-grasses-explained.html">
 
   <link rel="stylesheet" href="/styles.css">
   <link rel="icon" href="/favicon.ico">
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
 
-  <!-- Open Graph -->
-  <meta property="og:type" content="website">
-  <meta property="og:title" content="Warm Season vs Cool Season Grasses Explained">
-  <meta property="og:description" content="Clear differences between warm-season and cool-season grasses, when each thrives, and how growth patterns affect mowing, watering, and color.">
-  <meta property="og:url" content="https://grizzlygreens.net/lawn-basics/warm-season-vs-cool-season-grasses-explained.html">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Warm Season vs Cool Season Grasses Explained">
+  <meta name="twitter:description" content="Some lawns thrive in summer heat while others peak in cooler months. Knowing which type you have explains growth, color, and timing.">
+  <meta name="twitter:image" content="https://grizzlygreens.net/og-default.png">
 
-  <!-- Google tag -->
-  <!-- Google tag (gtag.js) -->
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  <meta property="og:type" content="article">
+  <meta property="og:site_name" content="GrizzlyGreens.net">
+  <meta property="og:title" content="Warm Season vs Cool Season Grasses Explained">
+  <meta property="og:description" content="Some lawns thrive in summer heat while others peak in cooler months. Knowing which type you have explains growth, color, and timing.">
+  <meta property="og:url" content="https://grizzlygreens.net/lawn-basics/warm-season-vs-cool-season-grasses-explained.html">
+  <meta property="og:image" content="https://grizzlygreens.net/og-default.png">
+
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-MXR7KVMW56"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-
   gtag('config', 'G-MXR7KVMW56');
 </script>
 </head>
@@ -40,72 +45,38 @@
       <a href="/soil-fertilizer/" class="nav-link">Soil, Fertilizer &amp; Amendments</a>
       <a href="/tools-safety/" class="nav-link">Tools &amp; Yard Safety</a>
     </nav>
-
-    <!-- On-site search (autocomplete; never leaves your site) -->
-    <div class="search-wrap" role="search">
-      <input
-        id="siteSearch"
-        class="search"
-        type="search"
-        placeholder="Search GrizzlyGreens..."
-        autocomplete="off"
-        autocapitalize="off"
-        spellcheck="false"
-        aria-label="Search GrizzlyGreens"
-        aria-expanded="false"
-        aria-controls="searchResults"
-      >
-      <div id="searchResults" class="search-results" role="listbox" aria-label="Search results"></div>
-    </div>
   </header>
 
   <main class="container">
     <h1>Warm Season vs Cool Season Grasses Explained</h1>
 
-<h2>The core difference</h2>
-<p>Warm-season grasses are built for heat. Growth accelerates as temperatures climb and slows hard in cool weather.</p>
-<p>Cool-season grasses are built for mild temperatures. Growth surges in spring and fall, then struggles in heat.</p>
-<p>This is not a small detail. It drives the lawn’s green-up timing, stress tolerance, and recovery speed.</p>
+<h2>Why lawns behave differently through the year</h2>
+<p>Most homeowners notice that their lawn looks great during part of the year and disappointing during another. Growth slows, color fades, or the yard just seems stuck. That shift is usually tied to whether the grass prefers heat or cooler weather.</p>
+<p>Lawns aren’t inconsistent on their own. They are responding to the part of the year they’re built for.</p>
 
-<h2>Growth calendar by season</h2>
-<p>Warm-season turf tends to look best from late spring through summer. It often goes tan or dull in cool months.</p>
-<p>Cool-season turf tends to look best in spring and fall. Summer can cause thinning, off-color patches, and stalled growth.</p>
-<p>Winter behavior varies by region, but the pattern stays consistent: warm-season declines earlier, cool-season holds color longer.</p>
+<h2>How warm season grass shows itself</h2>
+<p>Warm season grass comes into its own once temperatures climb. The lawn fills in quickly during summer and holds up better under heat. Earlier in the year, though, it can look thin or slow.</p>
+<p>This pattern often confuses homeowners who expect steady growth. The lawn is waiting for conditions it prefers.</p>
 
-<h2>Temperature triggers that matter</h2>
-<p>Warm-season growth ramps when soil warms up and nights stay mild. Cold snaps can stall growth fast.</p>
-<p>Cool-season growth ramps when daytime highs are moderate and soil is not overheated. Heat and warm nights drive stress.</p>
-<p>Soil temperature matters more than a single warm day. Turf responds to trends, not one afternoon.</p>
+<h2>How cool season grass behaves instead</h2>
+<p>Cool season grass looks strongest in spring and fall. It grows faster in mild weather and keeps color longer during cooler stretches. Summer heat often causes it to stall or thin out.</p>
+<p>This doesn’t mean the lawn is failing. It’s simply outside its comfort zone for part of the year.</p>
 
-<h2>How to tell what type is in the yard</h2>
-<p>Seasonal timing is the cleanest clue. Early spring green-up usually points to cool-season turf.</p>
-<p>Summer dominance with a winter fade usually points to warm-season turf. A winter lawn that stays green often indicates cool-season or overseeding.</p>
-<p>Leaf texture and runner behavior help. Many warm-season grasses spread with visible runners, while many cool-season lawns spread by bunching or fine stolons depending on species.</p>
+<h2>Water needs look different between the two</h2>
+<p>Warm and cool season lawns handle dry spells differently. Some lawns hold up surprisingly well without frequent watering, while others fade quickly when moisture drops. These differences show up most clearly during long dry periods.</p>
+<p><a href="how-long-grass-can-go-without-water.html">How Long Grass Can Go Without Water</a> explains why some lawns stay steady while others struggle.</p>
 
-<h2>Water needs and drought behavior</h2>
-<p>Warm-season grasses generally handle heat and short dry periods better once established. They can reduce growth and ride stress.</p>
-<p>Cool-season grasses often need more consistent moisture in hot weather. Heat plus dryness can turn minor stress into decline.</p>
-<p>Overwatering is not a fix. Saturated roots and shallow rooting make both types weaker under stress.</p>
+<h2>Why edges and pavement areas struggle more</h2>
+<p>Driveways and sidewalks exaggerate the differences between grass types. Heat buildup and dry conditions stress lawns that already dislike those extremes. Damage usually starts along these edges.</p>
+<p><a href="why-grass-dies-along-driveways.html">Why Grass Dies Along Driveways</a> explains why these spots often fail first.</p>
 
-<h2>Mowing differences</h2>
-<p>Warm-season turf often tolerates lower mowing when growth is strong, but scalping during spring green-up can set it back.</p>
-<p>Cool-season turf usually performs better with slightly higher mowing in summer. Taller leaf blades shade soil and reduce heat stress.</p>
-<p>Blade sharpness matters for both. Ragged cuts increase browning and slow recovery.</p>
+<h2>What texture changes can tell you</h2>
+<p>Grass that starts looking thin, stringy, or weak is often reacting to conditions it doesn’t prefer. Texture changes usually appear before full decline. They’re an early signal, not a sudden problem.</p>
+<p><a href="why-grass-becomes-stringy.html">Why Grass Becomes Stringy</a> shows how these changes tie back to timing and grass type.</p>
 
-<h2>Fertilizer timing and why it backfires</h2>
-<p>Warm-season feeding aligns with active summer growth. Heavy fertilizer during cool weather tends to waste product and encourage weak growth.</p>
-<p>Cool-season feeding aligns with spring and fall growth. Heavy fertilizer right before peak heat can push tender growth that burns out.</p>
-<p>Timing matters as much as product choice. Feeding when the grass is not growing well usually creates problems, not gains.</p>
-
-<h2>Overseeding and mixed lawns</h2>
-<p>Warm-season lawns are often overseeded with cool-season grass for winter color in some regions. That creates a seasonal handoff.</p>
-<p>Mixed lawns can happen naturally from patch repairs, shade zones, or past renovations. They rarely look uniform year-round.</p>
-<p>A mixed lawn is manageable, but expectations must match reality. Uniform color across all seasons is uncommon with mixed turf types.</p>
-
-<h2>What to do with the result</h2>
-<p>Confirming the season type sets the calendar. Watering, mowing height, and feeding should follow the grass’s active growth period.</p>
-<p>If the lawn looks great only part of the year, that is often normal behavior for the turf type. Chasing year-round peak color usually causes damage.</p>
-<p>When performance is consistently poor, the issue is usually shade, compaction, irrigation coverage, or soil problems, not the season category alone.</p>
+<h2>Why knowing your grass type simplifies care</h2>
+<p>Once you know whether your lawn is warm or cool season, a lot of confusion clears up. Growth slowdowns, color shifts, and watering needs start to make sense. Care decisions feel less like guessing.</p>
+<p>Matching expectations to the type of grass you have makes the lawn easier to live with year after year.</p>
   </main>
 
   <footer class="site-footer">
@@ -113,12 +84,10 @@
       <a href="/about.html">About</a>
       <a href="/disclaimer.html">Disclaimer</a>
       <a href="/privacy.html">Privacy Policy</a>
-      <a href="/sitemap.xml">Sitemap</a>
     </div>
     <div class="footer-copy">© 2025 GrizzlyGreens.net</div>
   </footer>
 
-  <!-- This must exist at /search.js in your repo root -->
-   <script src="/search.js"></script>
+  <script src="/search.js"></script>
 </body>
 </html>
