--- a/lawn-basics/what-happens-if-you-cut-grass-too-short.html
+++ b/lawn-basics/what-happens-if-you-cut-grass-too-short.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>What Happens If You Cut Grass Too Short</title>
-  <meta name="description" content="Cutting grass too short often makes a lawn look worse instead of better. The effects show up over days and weeks, not right away.">
+  <meta name="description" content="Cutting grass too short often makes a lawn decline slowly instead of improving it. The damage shows up over time, not right away.">
   <link rel="canonical" href="https://grizzlygreens.net/lawn-basics/what-happens-if-you-cut-grass-too-short.html">
 
   <link rel="stylesheet" href="/styles.css">
@@ -14,7 +14,7 @@
 
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="What Happens If You Cut Grass Too Short">
-  <meta name="twitter:description" content="Cutting grass too short often makes a lawn look worse instead of better. The effects show up over days and weeks, not right away.">
+  <meta name="twitter:description" content="Cutting grass too short often makes a lawn decline slowly instead of improving it. The damage shows up over time, not right away.">
   <meta name="twitter:image" content="https://grizzlygreens.net/og-default.png">
 
   <meta property="og:image:width" content="1200">
@@ -22,7 +22,7 @@
   <meta property="og:type" content="article">
   <meta property="og:site_name" content="GrizzlyGreens.net">
   <meta property="og:title" content="What Happens If You Cut Grass Too Short">
-  <meta property="og:description" content="Cutting grass too short often makes a lawn look worse instead of better. The effects show up over days and weeks, not right away.">
+  <meta property="og:description" content="Cutting grass too short often makes a lawn decline slowly instead of improving it. The damage shows up over time, not right away.">
   <meta property="og:url" content="https://grizzlygreens.net/lawn-basics/what-happens-if-you-cut-grass-too-short.html">
   <meta property="og:image" content="https://grizzlygreens.net/og-default.png">
 
@@ -50,33 +50,33 @@
   <main class="container">
     <h1>What Happens If You Cut Grass Too Short</h1>
 
-<h2>Why short cuts look good at first</h2>
-<p>Right after mowing low, the lawn usually looks neat, even, and finished.</p>
-<p>That clean look gives the impression that cutting shorter was the right decision.</p>
+<h2>Why short cuts feel like the right choice at first</h2>
+<p>Cutting grass short usually feels satisfying right after mowing. The lawn looks clean, even, and finished, and it seems like it should stay that way longer. Many people assume a lower cut means less frequent mowing and a neater yard overall.</p>
+<p>That early appearance is misleading. The lawn hasn’t reacted yet, and the problems caused by cutting too short take time to show themselves.</p>
 
-<h2>What changes a few days later</h2>
-<p>After a few days, color starts to fade and uneven spots become more noticeable.</p>
-<p>The lawn often looks thinner instead of tighter once the initial freshness wears off.</p>
+<h2>What changes after the fresh cut fades</h2>
+<p>A few days after a very short cut, the lawn often starts to lose its sharp look. Color fades unevenly, and thin areas become more noticeable instead of less. The yard can start looking tired even though it was just mowed.</p>
+<p>This delayed reaction is what confuses people. The cut didn’t fail right away, but it quietly set the lawn back.</p>
 
-<h2>Why fall makes the problem stand out</h2>
-<p>Short cuts tend to show their worst effects in fall when growth naturally slows.</p>
-<p>This is why many lawns suddenly look tired late in the season. <a href="why-grass-looks-worse-in-fall.html">Why Grass Looks Worse in Fall</a>.</p>
+<h2>Why fall makes short cuts look worse</h2>
+<p>Fall is when the damage from short cuts becomes harder to ignore. Growth slows naturally, so the lawn doesn’t recover as quickly between mows. Areas that were already weakened suddenly stand out.</p>
+<p>This is why lawns that looked acceptable all summer can fall apart late in the season. <a href="why-grass-looks-worse-in-fall.html">Why Grass Looks Worse in Fall</a> explains why timing matters so much.</p>
 
-<h2>When grass looks dead but isn’t</h2>
-<p>Grass cut too short can look lifeless even when it is still capable of coming back.</p>
-<p>Telling the difference prevents unnecessary panic. <a href="how-to-tell-if-grass-is-dormant-or-dead.html">How to Tell If Grass Is Dormant or Dead</a>.</p>
+<h2>When grass looks dead but is still alive</h2>
+<p>Grass cut too short often turns dull or brown, making it look dead even when it isn’t. The lawn may still have the ability to recover, but it won’t look good while it does. This visual change causes a lot of unnecessary worry.</p>
+<p>Knowing whether the lawn is resting or actually gone changes how you respond. <a href="how-to-tell-if-grass-is-dormant-or-dead.html">How to Tell If Grass Is Dormant or Dead</a> helps make that distinction.</p>
 
-<h2>Why growth doesn’t bounce back overnight</h2>
-<p>After a hard cut, grass takes time to regain height and appearance.</p>
-<p>This delay often leads people to assume nothing is happening. <a href="does-grass-grow-at-night.html">Does Grass Grow at Night</a>.</p>
+<h2>Why regrowth feels slow and uneven</h2>
+<p>After a hard cut, grass doesn’t bounce back overnight. Height and thickness return gradually, and progress is easy to miss day to day. This leads people to think nothing is happening.</p>
+<p>Growth still takes time, even under good conditions. <a href="does-grass-grow-at-night.html">Does Grass Grow at Night</a> explains why recovery always feels slower than expected.</p>
 
-<h2>Why new sod shows damage faster</h2>
-<p>Freshly laid sod reacts more dramatically to short cuts than established lawns.</p>
-<p>Early mowing mistakes slow how quickly sod settles in. <a href="how-long-sod-takes-to-root.html">How Long Sod Takes to Root</a>.</p>
+<h2>Why new sod shows damage sooner</h2>
+<p>Newly installed sod is especially sensitive to being cut too short. It hasn’t fully settled yet, so stress shows up faster and more dramatically. A single low cut can slow establishment.</p>
+<p>Early mowing mistakes linger longer on fresh lawns. <a href="how-long-sod-takes-to-root.html">How Long Sod Takes to Root</a> explains why patience matters early on.</p>
 
-<h2>What consistent height prevents</h2>
-<p>Keeping grass a little taller avoids most of the problems that come from cutting too low.</p>
-<p>The lawn stays more even and predictable instead of cycling between sharp and stressed.</p>
+<h2>What staying a little taller prevents</h2>
+<p>Leaving grass slightly taller avoids most of the problems caused by cutting too low. The lawn stays more even between mows and recovers faster from normal wear. Color holds longer, and thin spots are less likely to spread.</p>
+<p>A consistent, moderate height keeps the lawn predictable instead of reactive. The yard stops cycling between sharp and stressed.</p>
   </main>
 
   <footer class="site-footer">
